--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  max-width: 100%;
   font-family: "Roboto Slab", serif;
 }
 .nav-container a {
@@ -105,18 +106,20 @@ div#name-container {
 .services {
   display: flex;
   width: 100%;
+  height: 500px;
   background-color: #fffafa;
 }
 
 .web,
 .app {
-  width: 50%;
+  width: 33.3333%;
 }
 
 .app-content,
-.web-content {
+.web-content,
+.skills-content {
   /* margin-top: 5rem; */
-  margin-left: 15rem;
+  margin-left: 5rem;
 }
 
 .underline-head {
@@ -126,12 +129,12 @@ div#name-container {
 
 .service-img {
   height: 300px;
-  margin-left: 4rem;
+  margin-left: 2rem;
 }
 
 .service-content,
 .canDo {
-  width: 55%;
+  width: 70%;
   transform: translate(42px, -105px);
 }
 
@@ -147,13 +150,76 @@ div#name-container {
 }
 
 .skills {
-  width: 100%;
-  opacity: 0.5;
-  background-color: #55bcc9;
+  margin-top: 2rem;
+  width: 20%;
+  height: 80%;
+  border: 1px solid #fffafa;
+  background-color: #b4eef3;
+  opacity: 5;
 }
-.skills-logo {
-  width: 100%;
-  text-align: center;
+
+.skills-header {
+  color: black;
+  padding-left: 1rem;
+  padding-top: 1rem;
+  font-size: 25px;
+}
+
+.skills-content {
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
+
+.skill-item {
+  list-style: none;
+  margin-top: 1rem;
+}
+
+.skill-item img {
+  margin-left: 0.2rem;
+  height: 30px;
+  width: 30px;
+}
+
+.skill-item h5 {
+  font-weight: normal;
+  font-size: 18px;
+  display: inline-block;
+  transform: translate(15px, -8px);
+  color: black;
+}
+
+.skill-2 {
+  margin-left: 3rem;
+}
+
+.skill-2-js {
+  margin-left: 4rem;
+}
+
+.skill-2-dj {
+  margin-left: 2.5rem;
+}
+
+.skill-2-dj img {
+  width: 40px;
+  height: 40px;
+}
+
+.skill-2-njs {
+  margin-left: 5rem;
+}
+
+.skill-2-njs img {
+  width: 40px;
+  height: 40px;
+}
+
+.skill-2-fire {
+  margin-left: 1.5rem;
+}
+.skill-2-java {
+  margin-left: 3.5rem;
 }
 
 /* media Query */
@@ -246,17 +312,21 @@ div#name-container {
     height: 100%;
     background-color: #fffafa;
   }
-  .web,
+  .web {
+    width: 100%;
+    height: 290px;
+  }
+
   .app {
     width: 100%;
-    height: 100%;
+    height: 360px;
   }
 
   .app-content,
   .web-content {
     margin-top: 0rem;
     margin-left: 3rem;
-    width: 50%;
+    width: 60%;
     height: 340px;
   }
 
@@ -293,5 +363,20 @@ div#name-container {
 
   .underline-head {
     display: none;
+  }
+
+  .skills {
+    margin-top: 2rem;
+    margin-left: 4rem;
+    width: 70%;
+    height: 390px;
+    border: 1px solid #fffafa;
+    background-color: #b4eef3;
+    opacity: 5;
+    position: relative;
+  }
+
+  .skill-2-fire {
+    margin-left: 1.2rem;
   }
 }
